FIX: reduces visual noise of grouped events on mobile (#38)

--- a/assets/stylesheets/common/discourse-calendar.scss
+++ b/assets/stylesheets/common/discourse-calendar.scss
@@ -124,8 +124,7 @@
     }
 
     &.grouped-event {
-      background-color: none;
-      background: $secondary;
+      background-color: $primary-low;
       border: 1px solid $primary-low-mid;
       color: $primary;
 
